deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: naysayer
spec:
  type: ClusterIP
  selector:
    app: naysayer
  ports:
  - port: 3000
    targetPort: 3000
