deployments/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    paas.redhat.com/appcode: SNOW-008
    shard: internal
  name: naysayer
  namespace: ddis-asteroid--naysayer
spec:
  host: naysayer-ddis-asteroid--naysayer.apps.int.spoke.preprod.us-west-2.aws.paas.redhat.com
  port:
    targetPort: 3000
  tls:
    termination: edge
  to:
    kind: Service
    name: naysayer
    weight: 100
